--- a/Salto de Linea usando Variable.html
+++ b/Salto de Linea usando Variable.html
@@ -12,22 +12,30 @@ function SaltarLinea() {
 
 	}
 
- var anho = 2023;
- var saltarlinea = "<br><br><br>"
+function imprimir(frase) {
 
- document.write("Juan tiene :" + (anho-2023) + "años");
-
+ document.write(frase)
  SaltarLinea();
 
+}
+
+ var anho = 2023;
+ imprimir("Hola Amigos");
+ 
+ // este codigo calcula las edades de Juan, Pedro y Carlos
+
+ imprimir("Juan tiene :" + (anho-2023) + "años");
+
+ 
  alert("Hola!")
  
- document.write("Pedro tiene :" + (anho-1995) + "años");
+ 
+ imprimir("Pedro tiene :" + (anho-1995) + "años");
 
  anho = 2030
 
- SaltarLinea();
-
- document.write("Carlos tiene :" + (anho-2005) + "años");
+ 
+ imprimir("Carlos tiene :" + (anho-2005) + "años");
  
 
 </script>
