--- a/Calculo de IMC.html
+++ b/Calculo de IMC.html
@@ -25,15 +25,34 @@ function calcularImc(peso,altura) {
  
 }
 
-nombre = prompt("informe su nombre")
-pesoInformado = prompt(nombre + ", informe su peso")
-alturaInformado = prompt(nombre + ", informe su altura")
+nombre = prompt("informe su nombre");
+pesoInformado = prompt(nombre + ", informe su peso");
+alturaInformado = prompt(nombre + ", informe su altura");
 
-imcCalculado = calcularImc(pesoInformado,alturaInformado)
+imcCalculado = calcularImc(pesoInformado,alturaInformado);
 
 //toFixed() es usado para limitar a n numero de decimales
 
 imprimir(nombre + ", su imc calculado es: " + imcCalculado.toFixed(2));
+
+
+if (imcCalculado < 18.5) {
+imprimir("IMC abajo de lo recomendado");
+}
+
+if (imcCalculado >= 18.5) {
+
+if (imcCalculado < 25) {
+imprimir("IMC esta dentro del intervalo normal");
+
+}
+
+
+}
+
+if (imcCalculado >= 30) {
+imprimir("IMC considerado como obesidad")
+}
 
  </script> 
 
