--- a/Juego Adivinacion.html
+++ b/Juego Adivinacion.html
@@ -19,16 +19,34 @@ function imprimir(frase) {
 
 }
 
-var numeroPensado = 5;
-var numeroLanzado = parseInt(prompt("Ingrese un numero entre 0-10"))
+var numeroPensado = Math.round(Math.random()*10);
+var intentos = 3;
+var contador = 1;
+
+while (contador <= intentos) {
+
+var numeroLanzado = parseInt(prompt("Ingrese un numero entre 0-10"));
+if (numeroPensado == numeroLanzado){
+alert("Usted acertó, en el intento " + intento + "el numero pensado era " + numeroPensado);
+break; 
+}
+else {
+	alert("Usted erró");
+}
+
+contador++;
+
+} 
 
 if (numeroPensado == numeroLanzado){
-imprimir("Usted acertó")
+imprimir("Usted acertó, en el intento " + intento + " el numero pensado era " + numeroPensado);
 }
 
-if (numeroPensado != numeroLanzado) {
-imprimir("Usted erró, el numero pensado era " + numeroPensado)
+else {
+imprimir("Usted erró, el numero pensado era " + numeroPensado);
 }
 
+imprimir("Fin");
 
 </script>
+
