--- a/ejercicio de while yo solita.html
+++ b/ejercicio de while yo solita.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<h1>PROGRAMA - CALCULAR LA MEDIA DE EDADES DE UNA FAMILIA</h1>
+<h1>PROGRAMA - Impresion de Numeros del 0 al 100 en Pares</h1>
 
 <script>
 
