--- a/Juego Adivinacion.html
+++ b/Juego Adivinacion.html
@@ -27,7 +27,7 @@ while (contador <= intentos) {
 
 var numeroLanzado = parseInt(prompt("Ingrese un numero entre 0-10"));
 if (numeroPensado == numeroLanzado){
-alert("Usted acertó, en el intento " + intento + "el numero pensado era " + numeroPensado);
+alert("Usted acertó, en el intento " + contador + "el numero pensado era " + numeroPensado);
 break; 
 }
 else {
@@ -39,7 +39,7 @@ contador++;
 } 
 
 if (numeroPensado == numeroLanzado){
-imprimir("Usted acertó, en el intento " + intento + " el numero pensado era " + numeroPensado);
+imprimir("Usted acertó, en el intento " + contador + " el numero pensado era " + numeroPensado);
 }
 
 else {
